--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
   },
   "dependencies": {
     "@vueuse/core": "^9.13.0",
+    "aos": "^2.3.4",
     "bootstrap-icons": "^1.8.1",
+    "vite": "^5.0.0",
     "vue": "^3.2.31",
     "vue-i18n": "^9.9.0",
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
     "@types/vue-i18n": "^7.0.0",
-    "@vitejs/plugin-vue": "^2.2.2",
-    "vite": "^2.8.4"
+    "@vitejs/plugin-vue": "^5.2.1"
   }
 }
